# ds-arena

./: .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/workflows/: build.yml  docker.yml
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs  worker.rs
crates/captcha/: Cargo.toml
crates/captcha/src/: lib.rs  traits.rs
crates/checker/: Cargo.toml
crates/checker/src/: lib.rs  traits.rs  worker.rs
crates/env/: Cargo.toml
crates/env/src/: lib.rs  traits.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: logger.rs  main.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs  traits.rs
crates/web/src/middleware/: error.rs  network.rs
crates/web/src/router/: mod.rs  proxy.rs
crates/web/src/router/api/: mod.rs
crates/web/src/router/api/submission/: mod.rs
crates/web/src/util/: network.rs
resources/: criteria.csv  test.csv
web/: .env.development  .gitignore  biome.json  components.json  index.html  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: Data.tsx  Navbar.tsx  Submit.tsx
web/src/components/ui/: button.tsx  field.tsx  scroll-area.tsx  table.tsx  text-field.tsx
web/src/components/widgets/: navbar.tsx  submit.tsx
web/src/components/widgets/history/: columns.tsx  index.tsx
web/src/models/: captcha.ts  submission.ts
web/src/storages/: appearance.ts  shared.ts
web/src/stores/: shared.ts
web/src/styles/: main.css
web/src/types/: index.ts
web/src/utils/: alova.ts  axios.ts  theme.ts
web/src/workers/: pow.ts
