[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["ElaBosak233 <i@e23.dev>"]
edition = "2024"
publish = false
repository = "https://github.com/ElaBosak233/ds-arena"
rust-version = "1.85.0"
version = "1.0.1"

[workspace.dependencies]
# Local Libraries
dsa-cache = { path = "crates/cache" }
dsa-captcha = { path = "crates/captcha" }
dsa-checker = { path = "crates/checker" }
dsa-env = { path = "crates/env" }
dsa-model = { path = "crates/model" }
dsa-queue = { path = "crates/queue" }
dsa-web = { path = "crates/web" }

# Async
tokio = { version = "1.45", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Web
axum = { version = "0.8", features = [
    "ws",
    "http2",
    "multipart",
    "macros",
    "tower-log",
    "tracing",
    "json",
] }
tower_governor = { version = "0.7" }

# Security
rustls = { version = "0.23", features = ["ring"] }
ring = { version = "0.17" }
hex = { version = "0.4.3" }

# Data Handling
nanoid = { version = "0.4" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Error Handling
thiserror = { version = "2.0" }
anyhow = { version = "1.0" }

# Tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "json",
] }
tracing-appender = "0.2"
tracing-error = { version = "0.2" }

# Miscellaneous
once_cell = { version = "1.21" }
dashmap = { version = "6.1" }
polars = { version = "0.46", features = ["lazy"] }

[profile.release]
opt-level = 3
strip = true
lto = "thin"
panic = "abort"
codegen-units = 1
