[package]
name = "dsa-cache"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
once_cell = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }