[package]
name = "dsa-captcha"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
dsa-cache = { workspace = true }
dsa-env = { workspace = true }

nanoid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }