[package]
name = "dsa-checker"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
dsa-env = { workspace = true }
dsa-queue = { workspace = true }
dsa-cache = { workspace = true }
dsa-model = { workspace = true }

tokio = { workspace = true }
polars = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }