[package]
name = "dsa-queue"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
tokio = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }