[package]
name = "dsa-server"
resolver = "3"

authors = { workspace = true }
edition  = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
dsa-web = { workspace = true }
dsa-env = { workspace = true }
dsa-cache = { workspace = true }
dsa-checker = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
once_cell = { workspace = true }
rustls = { workspace = true }
tracing-appender = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "dsa-server"
path = "src/main.rs"